# quora-clone

./: .dockerignore  .env  .env.local  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml  qna.json
core/: test.py  urls.py
core/admin/: __init__.py  answer.py  question.py
core/config/: asgi.py  settings.py  urls.py
core/forms/: __init__.py  answer.py  auth.py  question.py
core/management/commands/: load_qna.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  answer.py  question.py
core/static/css/: styles.css
core/templates/: base.html
core/templates/core/: question_detail.html  question_form.html  question_list.html
core/templates/registration/: login.html  logout.html  signup.html
core/views/: __init__.py  answer.py  auth.py  question.py
playground/: playground.py  test.ipynb
scripts/: entrypoint.prod.sh  pre_commands.sh
test/: __init__.py
test/models/: __init__.py  test_answer.py  test_question.py
test/views/: __init__.py  test_answer.py  test_question_create.py  test_question_detail.py  test_question_list.py  test_question_search.py
